force-app/main/default/objects/Diner__c/Diner__c.object-meta.xml
<CustomObject>
    <description>Diner profile capturing preferences and linkage to Contact</description>
    <label>Diner</label>
    <nameField>
        <displayFormat>DNR-{00000}</displayFormat>
        <label>Diner Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Diners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>