force-app/main/default/objects/Diner__c/fields/Accessibility_Needs__c.field-meta.xml
<CustomField>
    <fullName>Accessibility_Needs__c</fullName>
    <label>Accessibility Needs</label>
    <type>Text</type>
    <length>255</length>
</CustomField>