force-app/main/default/objects/Diner__c/fields/Average_Party_Size__c.field-meta.xml
<CustomField>
    <fullName>Average_Party_Size__c</fullName>
    <description>Average party size</description>
    <label>Average Party Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>