force-app/main/default/objects/Diner__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional linkage to standard Contact</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Diners</relationshipLabel>
    <relationshipName>Diners</relationshipName>
    <type>Lookup</type>
</CustomField>