force-app/main/default/objects/Diner__c/fields/Dietary_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Preferences__c</fullName>
    <description>Dietary preferences</description>
    <label>Dietary Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vegan</fullName>
            </value>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>Gluten-Free</fullName>
            </value>
            <value>
                <fullName>Dairy-Free</fullName>
            </value>
            <value>
                <fullName>Nut-Free</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>