force-app/main/default/objects/Diner__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <type>Text</type>
    <length>255</length>
</CustomField>