force-app/main/default/objects/Diner__c/fields/Favorite_Cuisines__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Cuisines__c</fullName>
    <description>Favorite cuisines</description>
    <label>Favorite Cuisines</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Indian</fullName>
            </value>
            <value>
                <fullName>Mexican</fullName>
            </value>
            <value>
                <fullName>American</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Mediterranean</fullName>
            </value>
            <value>
                <fullName>Thai</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>