force-app/main/default/objects/Diner__c/fields/Preferred_Dining_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Dining_Time__c</fullName>
    <description>Preferred dining time window</description>
    <label>Preferred Dining Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>