force-app/main/default/objects/Diner__c/fields/Total_Lifetime_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Total_Lifetime_Bookings__c</fullName>
    <description>Total lifetime bookings</description>
    <label>Total Lifetime Bookings</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>